# wire-protocols

./: .gitignore  CMakeLists.txt  README.md  client.cpp  network.cpp  network.hpp  notebook.md  server.cfg  server.cpp
include/: client.hpp  network.hpp  server.hpp
proto/: chat.proto
src/: callback.cpp  client.cpp  clientMain.cpp  network.cpp  server.cpp  serverMain.cpp
test/: test.cpp
